--- a/views/chat.html
+++ b/views/chat.html
@@ -16,8 +16,8 @@
         <span id="lastGameWinner"></span><br>
         <span id="lastMissionResult"></span><br>
         <span>Player List</span>
-        <ul id="playerList">
-        </ul>
+        <table id="playerList">
+        </table>
     </div>
     <div class="gameDetails">
         <span id="playerRole"></span><br>
