--- a/views/chat.html
+++ b/views/chat.html
@@ -34,7 +34,7 @@
                 <span id="fail_time"></span><br>
                 
             </div>
-            <div class="sendMission">
+            <div class="sendMission" id="sendMissionInform">
             </div>
             <div class="vote">
             </div>
