--- a/public/css/main.css
+++ b/public/css/main.css
@@ -74,6 +74,13 @@ div {width:500px;}
     padding:5px; 
     width:300px;  
 }
+#roomInput{
+    border-radius:2px; 
+    border:1px solid #ccc;
+    margin-top:10px; 
+    padding:5px; 
+    width:300px;  
+}
 #status{ 
     width:80px; 
     display:block; 
@@ -93,6 +100,7 @@ div {width:500px;}
     display:none;
 }
 #playerList{
+    margin:10px;
     padding:5px; 
     background:#EEE; 
     border-radius:5px;
