--- a/views/chat.html
+++ b/views/chat.html
@@ -16,7 +16,7 @@
     <div class="room" style="width:100%; display:none;">
         <div class="setName">
             <span id="connectStatus">Connecting...</span>
-            <input type="text" id="nameInput"/>
+            <input type="text" id="nameInput" autocomplete="off" />
         </div>
         <div style="//background-color: #888888;width:100%; height:60%;">
             <div id="gameInformArea" style="">
@@ -88,7 +88,7 @@
                     <div id="content"></div>
                 </div>
                 <span id="status">Connecting...</span>
-                <input type="text" id="input"/>
+                <input type="text" id="input" autocomplete="off" />
             </div>
         
             <div class="displayChat" style="position:absolute; display:inline-block; top:10 px   ; left:420px;">
